Fixed bug with clsoe button in settings where overlapping the subtabs. Fixed screenshot naming in the youtube experiments.

--- a/src/.styles/modules.css
+++ b/src/.styles/modules.css
@@ -580,7 +580,6 @@
 }
 
 .ytcenter-modules-layoutExperiments .layoutExperimentPreview img {
-  width: 100%;
   height: 100%;
 }
 
